fix(MT): resolve issues discovered during testing of 3513 and 3412 tasks (#3581)